<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgl"
>


    <LinearLayout
        android:layout_width="371dp"
        android:layout_height="292dp"
        android:layout_above="@+id/input_group"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="44dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="27dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/TEXTO_PRINCIPAL_INVERSO"
            android:textStyle="bold"
            android:shadowColor="#000000"
            android:shadowRadius="25"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="82dp"
            android:text="@string/action_sign_in"
            android:textColor="@color/TEXTO_PRINCIPAL_INVERSO"
            android:textStyle="bold"
            android:shadowColor="#000000"
            android:shadowRadius="25"
            android:textSize="42sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/FONDO_PRINCIPAL"
            android:hint="Correo Electronico"
            android:textColorHint="@color/TEXTO_PRINCIPAL"
            android:textColor="@color/TEXTO_PRINCIPAL"
            android:textSize="22dp"
            android:inputType="textPersonName"
            android:padding="24dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/FONDO_PRINCIPAL"
            android:hint="Contraseña"
            android:textColorHint="@color/TEXTO_PRINCIPAL"
            android:textColor="@color/TEXTO_PRINCIPAL"
            android:textSize="22dp"
            android:inputType="textPassword"
            android:padding="24dp" />


        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/action_sign_in"
            android:textAllCaps="false"
            android:background="@color/FONDO_SECUNDARIO"
            android:textColor="@color/TEXTO_PRINCIPAL"
            android:textSize="24sp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/signup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@color/NOTIFICACION_FONDO"
            android:padding="10dp"
            android:text="@string/registro_de_cuenta"
            android:textAllCaps="true"
            android:textColor="@color/TEXTO_SECUNDARIO"
            android:textSize="13sp"
            android:textStyle="bold" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone" />

</RelativeLayout>